--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@studio-freight/lenis": "^1.0.42",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
+    "mongodb": "^6.18.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
