--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "next": "15.4.6",
