--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
