--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "motion": "^12.23.12",
     "next": "15.4.6",
     "next-cloudinary": "^6.16.0",
+    "pdfjs-dist": "^5.4.394",
     "qss": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
